# Claude-Code-Plugins

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .prettierignore  .project-standards.yml  .pth-tools-cache.json  .release-waivers.json  AGENTS.md  AGENTS.reviews.md  BRANCH_PROTECTION.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MARKETPLACE_CHECKLIST.md  PROTECTION_SYSTEM.md  README.md  SECURITY.md  STATUS.md  TODO.md  package-lock.json  package.json
.claude/: hookify.warn-force-push.local.md  hookify.warn-rm-rf.local.md  settings.json
.claude-plugin/: marketplace.json
.codex/: AGENTS.md
.contextstream/: config.json
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.pth/: SESSION-REPORT.md  session-state.json
.serena/: project.yml
docs/: STATUS.md  TODO.md  mcp.md  (+18 more)
plugins/keepass-cred-mgr/: .gitignore  .mcp.json  CHANGELOG.md  README.md  config.example.yaml  pyproject.toml
plugins/keepass-cred-mgr/.claude-plugin/: plugin.json
plugins/keepass-cred-mgr/commands/: keepass-audit.md  keepass-rotate.md  keepass-status.md
plugins/keepass-cred-mgr/docs/: keepass-cred-mgr-claude-code-brief.md  keepass-cred-mgr-design.md  keepass-cred-mgr-setup.md
plugins/keepass-cred-mgr/docs/plans/: 2026-02-27-keepass-cred-mgr.md  2026-03-14-audit-findings-fix-plan.md  2026-03-14-yubikey-access-hardening-design.md  2026-03-14-yubikey-access-hardening-plan.md
plugins/keepass-cred-mgr/docs/testing/: TEST_STATUS.json
plugins/keepass-cred-mgr/scripts/: start-server.sh
plugins/keepass-cred-mgr/scripts/fake-tools/: keepassxc-cli
plugins/keepass-cred-mgr/server/: audit.py  config.py  diagnostics.py  main.py  vault.py  yubikey.py
plugins/keepass-cred-mgr/server/tools/: read.py  write.py
plugins/keepass-cred-mgr/skills/keepass-credential-anthropic/: SKILL.md
plugins/keepass-cred-mgr/skills/keepass-credential-brave-search/: SKILL.md
plugins/keepass-cred-mgr/skills/keepass-credential-cpanel/: SKILL.md
plugins/keepass-cred-mgr/skills/keepass-credential-ftp/: SKILL.md
plugins/keepass-cred-mgr/skills/keepass-credential-ssh/: SKILL.md
plugins/keepass-cred-mgr/skills/keepass-hygiene/: SKILL.md
plugins/keepass-cred-mgr/tests/: conftest.py  helpers.py
plugins/keepass-cred-mgr/tests/fixtures/: create_test_db.sh  test.kdbx
plugins/keepass-cred-mgr/tests/integration/: test_integration.py
plugins/keepass-cred-mgr/tests/unit/: test_audit.py  test_config.py  test_diagnostics.py  test_main.py  test_tools.py  test_vault.py  test_yubikey.py
plugins/up-docs/tests/: README.md  capture-transcript.bats  commit-candidates.bats  context-gather.bats  convergence-tracker.bats  deny-guard.bats  helpers.bash  link-audit.bats  manifest.bats  prompt-conformance.bats  pyproject.toml  run-bats.sh  server-inspect.bats  test_validate_output.py  test_verify_evidence_grounded.py  validate_output.py  verify_evidence_grounded.py
plugins/up-docs/tests/fixtures/: routing-cases.md  up-docs-active-transcript.jsonl
plugins/up-docs/tests/fixtures/stubs/: ssh
(+1535 files in other folders)
