[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "keepass-cred-mgr"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mcp",
    "structlog",
    "pyyaml",
    "filelock",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
include = ["server*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require keepassxc-cli)",
]
