[project]
name = "up-docs-tests"
version = "0.0.0"
description = "Test dependencies for the up-docs plugin (Pydantic validators, pytest, FastMCP stubs, optional DeepEval)."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.5,<3.0",
  "typing_extensions>=4.9,<5.0",
  "pytest>=8.0,<9.0",
]

[project.optional-dependencies]
mcp-stubs = [
  "fastmcp>=0.4,<1.0",
]
deepeval = [
  "deepeval>=1.4,<2.0",
  "anthropic>=0.40,<1.0",
]
test = [
  "up-docs-tests[mcp-stubs]",
]
all = [
  "up-docs-tests[mcp-stubs,deepeval]",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
